# bishoptech-bish

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  autumn.config.ts  docker-compose.postgres.yml  eslint.config.mjs  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
.cursor/: mcp.json
actions/: admin-organizations.ts  getAuditLogPortalLink.ts  getAutumnBillingPortalUrl.ts  getCurrentUserProfile.ts  getOrganizationMembers.ts  getOrganizationSubscription.ts  getSubscribeCheckoutUrl.ts  getWorkOSWidgetToken.ts  inviteUser.ts  removeMember.ts  revokeInvitation.ts  signout.ts  updateCurrentUserProfile.ts  updateRole.ts
app/: layout.tsx  manifest.json  page.tsx  providers.tsx
apps/listener-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/listener-desktop/src-tauri/src/: main.rs
components/: ConvexClientProvider.tsx  app-sidebar.tsx  chat-interface-with-preload.tsx  chat-interface.tsx  chat-list.tsx  chat-message.tsx  chat-messages-client.tsx  chat-messages-server.tsx  chat-page.tsx  edit-message.tsx  home-message-handler.tsx  preview-chat-input.tsx  sidebar-history.tsx  sidebar-profile.tsx  theme-color-updater.tsx  thread-sidebar-client.tsx  thread-sidebar-interactive.tsx  thread-sidebar.tsx  user-profile-section.tsx
contexts/: chat-cache.tsx  model-context.tsx  permissions-context.tsx
convex/: autumn.ts  chats.ts  (+13 more)
(+1474 files in other folders)
